# gr-txid

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
apps/data_exploitation/: train_cnn.py  train_multirx.sh  train_robotrx.sh
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  (+5 more)
docs/: CMakeLists.txt  README.txid
examples/: PickleResults.ipynb  README  createFolderAndFiles_usrp.py  generateData.sh
grc/: CMakeLists.txt  txid_correlator.block.yml  txid_correlator.xml  txid_data_switch.block.yml  txid_data_switch.xml  txid_head.block.yml  txid_head.xml  txid_ofdm_rx.block.yml  txid_ofdm_tx.block.yml  txid_packet_isolator_c.block.yml  txid_packet_isolator_c.xml  txid_record_payload.block.yml  txid_udp_trigger.block.yml  txid_udp_trigger.xml
lib/: CMakeLists.txt  correlator_impl.cc  correlator_impl.h  head_impl.cc  head_impl.h  packet_header_ofdm.cc  packet_isolator_c_impl.cc  packet_isolator_c_impl.h  qa_txid.cc  qa_txid.h  test_txid.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  data_switch.py  qa_correlator.py  qa_data_switch.py  qa_head.py  qa_packet_isolator_c.py  qa_udp_trigger.py  udp_trigger.py
python/txid/bindings/: CMakeLists.txt  correlator_python.cc  head_python.cc  packet_header_ofdm_python.cc  packet_isolator_c_python.cc  python_bindings.cc
python/txid/bindings/docstrings/: correlator_pydoc_template.h  head_pydoc_template.h  packet_header_ofdm_pydoc_template.h  packet_isolator_c_pydoc_template.h
swig/: CMakeLists.txt  txid_swig.i
(+39 files in other folders)
